rename and wip making jtreg test work